@@ -7,3 +7,7 @@ echo true > initialized
 echo IF EXIST "initialized" del init.bat > update.bat
 echo >> update.bat
 echo git pull >> update.bat
+
+echo @ECHO OFF > startKettle.bat
+echo java -Xms128M -Dfile.encoding=CP866 -XX:+AggressiveOpts -verbose:gc -Xloggc:gc.log -d64 -jar kettle.jar >> startKettle.bat
+echo @pause >> startKettle.bat
